@@ -1,4 +1,10 @@
+2006-05-26  Michael Wybrow  <mjwybrow@users.sourceforge.net>
+
+	* src/path-prefix.h: Add missing CREATE_* directory locations
+	  for building an OS X application bundle.  Fixes bug #1495284.
+
 2006-05-25  Bryce Harrington <bryce@bryceharrington.org>
+
 	* src/inkscape.cpp:  i18n on error messages (fix for bug 1490928) 
 
 2006-05-23  Jon A. Cruz  <jon@joncruz.org>
